Changelog
=========

0.2.1 - current
------------------

- Support Plone 4.1
- Heavily edited readme [miohtama]

0.2.1 - 2011-08-03
------------------
- Add INewChildIsReady event and move INewChildForked event
- Remove overly used prints and use logging
- Can now reload __init__.py from package root


0.2.0 - 2011-08-04
------------------

- Support for Five-initialized products (e.g. Archetypes).
- Browser View for manual reloading
- Emit INewChildForked events
- Many bug fixes

0.1.1 - 2011-08-03
------------------

- Added missing egg description.
- Added forgotten reload for localizations.
- Prefixed commands in README with $.

0.1.0 - 2011-08-03
------------------

- First experimental release.