@@ -134,7 +134,7 @@ def check_deferring():
     cwd = os.getcwd() + os.path.sep
     for zcml in getattr(configuration_context, "_seen_files", ()):
         if zcml in reload_paths:
-            logger.error("Failed to defer %s. IT WILL NOT BE RELOADABLE."
+            logger.deferedError("Failed to defer %s. IT WILL NOT BE RELOADABLE."
                          % zcml.replace(cwd, ""))
 
 
