@@ -6,6 +6,7 @@ Changelog
 
 - Support Plone 4.1
 - Heavily edited readme [miohtama]
+- Show nice error log message if product installation failed to defer ie. is not reloadable.
 
 0.2.1 - 2011-08-03
 ------------------
